# jokes.house

intercom/: Cargo.toml  README.md  shell.nix
intercom/crates/cam/: Cargo.toml
intercom/crates/cam/src/: encoder.rs  ffmpeg.rs  index.html  main.rs  webrtc.rs
