[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Jack Foltz <jack@foltz.io>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/foltik/intercom"
readme = "README.md"
keywords = []
categories = []


[workspace.dependencies]
anyhow = "1"
tokio = "1"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
webrtc = "0.13"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
